--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Jose Luis Garcia M",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^5.12.3",
     "multer": "^1.4.2",
