--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   "author": "Jose Luis Garcia M",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.3",
     "multer": "^1.4.2",
     "shortid": "^2.2.16"
